Ie10 bug fix (#59)
* excluded synchronising css folder

* excluded synchronising css folder

* Clean variables (#30)

* excluded synchronising css folder

* excluded synchronising css folder

* excluded synchronising css folder

* removed redundant variables

excluded synchronising css folder

* fix problem with overflowing pictures on the index page

* fix overfloving recomendations icons on the index page

* fix overflowing containers

* fix missing social icons and change units from px to rem

* fix overfloving images

* fix video icons

* fix flexbox problem on the form page

* remove comments from html

* remove unnecessary nesting in form.scss

* remove unnecessary nesting from all of the files

--- a/src/sass/blocks/image-wrapper/_image-wrapper.scss
+++ b/src/sass/blocks/image-wrapper/_image-wrapper.scss
@@ -17,8 +17,10 @@
   // Tablet-screen
   @include screen-size($tablet-size) {
     height: auto;
-    width: 100%;
-    flex-basis: 100%;
+    width: auto;
+    flex-grow: 1;
+    flex-shrink: 1;
+    flex-basis: auto;
 
     &--bottom {
       order: -1;
